--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -45,12 +45,23 @@
         </odp-input-data-selector>
     </div> -->
     <div *ngIf="currNode?.type!='DATASERVICE'" class="form-group">
+        <label class="font-14 fw-400 text-dark mb-0" for="inputDataStructure">Input Data Structure
+            <span class="text-muted"><i>(optional)</i></span>
+        </label>
+        <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
+        <odp-data-structure-selector id="inputDataStructure" class="d-flex ml-4" [edit]="edit"
+            [format]="currNode.dataStructure?.incoming" (formatChange)="onFormatChange($event,'incoming')"
+            [hideGeneric]="currNode?.type=='MAPPING'">
+        </odp-data-structure-selector>
+    </div>
+    <div *ngIf="currNode?.type!='DATASERVICE'" class="form-group">
         <label class="font-14 fw-400 text-dark mb-0" for="outputDataStructure">Output Data Structure
             <span class="text-muted"><i>(optional)</i></span>
         </label>
         <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
-        <odp-data-structure-selector class="d-flex ml-4" [edit]="edit" [format]="currNode.dataStructure?.outgoing"
-            (formatChange)="onFormatChange($event)" [hideGeneric]="currNode?.type=='MAPPING'">
+        <odp-data-structure-selector id="outputDataStructure" class="d-flex ml-4" [edit]="edit"
+            [format]="currNode.dataStructure?.outgoing" (formatChange)="onFormatChange($event,'outgoing')"
+            [hideGeneric]="currNode?.type=='MAPPING'">
         </odp-data-structure-selector>
     </div>
     <ng-container *ngIf="isInputNode">
