--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -45,7 +45,8 @@
         </odp-input-data-selector>
     </div> -->
     <div class="form-group">
-        <label class="font-14 fw-400 text-dark mb-0" for="inputDataStructure">Input Data Structure
+        <label *ngIf="currNode?.type!='RESPONSE' && !isInputNode" class="font-14 fw-400 text-dark mb-0"
+            for="inputDataStructure">Input Data Structure
             <span class="text-muted"><i>(optional)</i></span>
         </label>
         <small class="form-text text-muted mb-3">Set the data structure that this node will accept</small>
