--- a/src/app/utils/data-structure-selector/data-structure-selector.component.html
+++ b/src/app/utils/data-structure-selector/data-structure-selector.component.html
@@ -1,62 +1,72 @@
-<div class="selector-options d-flex flex-column">
-    <div *ngIf="!hideGeneric" class="d-flex align-items-center justify-content-start w-100 mb-2" (click)="onTypeChange('generic')">
-        <odp-round-radio [edit]="edit" [checked]="selectedType == 'generic'" (checkedChange)="onTypeChange('generic')">
-        </odp-round-radio>
-        <span class="text ml-3">Generic</span>
-    </div>
-    <div class="d-flex flex-column w-100 mb-2">
-        <div class="d-flex align-items-center justify-content-start w-100" (click)="onTypeChange('dataFormat')">
-            <odp-round-radio [edit]="edit" [checked]="selectedType == 'dataFormat'"
-                (checkedChange)="onTypeChange('dataFormat')">
-            </odp-round-radio>
-            <span class="text ml-3">Data Schema</span>
-            <span *ngIf="format && selectedType=='dataFormat'" class="text-primary ml-3 hover font-11" (click)="changeDataFormat()">(change)</span>
+<div class="selector-options d-flex align-items-center">
+    <div class="d-flex flex-column rounded border">
+        <div *ngIf="format" class="selected-format-name d-flex align-items-center border-bottom">
+            <span class="label px-2 py-1 text-secondary font-12 fw-500 border-right">Name</span>
+            <span class="value px-2 py-1 text-primary fw-400">{{format.name}}</span>
         </div>
-        <span *ngIf="format && selectedType=='dataFormat'"
-            class="text-primary selected-format-name">({{format.name}})</span>
-    </div>
-    <div class="d-flex flex-column w-100 mb-2">
-        <div class="d-flex align-items-center justify-content-start w-100" (click)="onTypeChange('customFormat')">
-            <odp-round-radio [edit]="edit" [checked]="selectedType == 'customFormat'"
-                (checkedChange)="onTypeChange('customFormat')">
-            </odp-round-radio>
-            <span class="text ml-3">Custom</span>
-            <span *ngIf="format && selectedType=='customFormat'" class="text-primary ml-3 hover font-11" (click)="changeCustomFormat()">(change)</span>
-        </div>
-        <span *ngIf="format && selectedType=='customFormat'"
-            class="text-primary selected-format-name">({{format.name}})</span>
-    </div>
-    <div *ngIf="(selectedType == 'customFormat' || selectedType == 'dataFormat') && format"
-        class="d-flex flex-column w-100 mb-2">
-        <div class="d-flex align-items-center justify-content-start w-100">
-            <span class="text mr-3">Strict Validation</span>
-            <odp-checkbox [edit]="edit" [(checked)]="format.strictValidation">
-            </odp-checkbox>
+        <div class="selected-format-type d-flex align-items-center">
+            <span class="label px-2 py-1 text-secondary font-12 fw-500 border-right">Type</span>
+            <span *ngIf="format" class="value px-2 py-1 text-dark fw-400 font-13">{{format.formatType || 'JSON'}}</span>
+            <span *ngIf="!format" class="value px-2 py-1 text-dark fw-400 font-13">Generic</span>
         </div>
     </div>
+    <button type="button" class="btn btn-link d-flex align-items-center" (click)="showWindow=!showWindow">
+        <span class="dsi dsi-settings"></span>
+    </button>
 </div>
 
 <div [ngClass]="{'show':showWindow,'more-width':selectedType=='customFormat'}"
     class="data-structure-window p-4 position-fixed bg-white border-left">
     <ng-container *ngIf="showWindow">
+        <div class="d-flex align-items-center justify-content-between mb-4">
+            <span class="font-22 fw-600">Select Data Structure Type</span>
+            <button type="button" class="btn btn-link" (click)="closeWindow()">
+                <span class="dsi dsi-close text-dark"></span>
+            </button>
+        </div>
+        <div class="d-flex align-items-center justify-content-between mb-4">
+            <div class="d-flex align-items-center">
+                <odp-round-radio [edit]="edit" [checked]="selectedType == 'generic'"
+                    (checkedChange)="onTypeChange('generic')">
+                </odp-round-radio>
+                <span class="ml-2">Generic</span>
+            </div>
+            <div class="d-flex align-items-center">
+                <odp-round-radio [edit]="edit" [checked]="selectedType == 'dataFormat'"
+                    (checkedChange)="onTypeChange('dataFormat')">
+                </odp-round-radio>
+                <span class="ml-2">Data Format</span>
+            </div>
+            <div class="d-flex align-items-center">
+                <odp-round-radio [edit]="edit" [checked]="selectedType == 'customFormat'"
+                    (checkedChange)="onTypeChange('customFormat')">
+                </odp-round-radio>
+                <span class="ml-2">Custom</span>
+            </div>
+        </div>
+        <ng-container *ngIf="selectedType=='generic'">
+            <div class="d-flex align-items-center justify-content-between my-4">
+                <p>A Generic Data Structure can accept data with no strict structure.</p>
+            </div>
+            <div class="d-flex align-items-center justify-content-end">
+                <button type="button" class="btn btn-primary w-100" (click)="save()">Done</button>
+            </div>
+        </ng-container>
         <ng-container *ngIf="selectedType=='dataFormat'">
             <div class="d-flex align-items-center justify-content-between mb-4">
-                <span class="font-22 fw-600">Select Data Structure</span>
-                <button type="button" class="btn btn-link" (click)="closeWindow()">
-                    <span class="dsi dsi-close text-dark"></span>
-                </button>
+                <span class="font-20 fw-500">Select Format</span>
             </div>
-            <odp-data-format-selector [edit]="edit" [(format)]="format" (formatChange)="onFormatChange($event)">
+            <odp-data-format-selector [edit]="edit" [(format)]="tempFormat" (formatChange)="onFormatChange($event)">
             </odp-data-format-selector>
         </ng-container>
         <ng-container *ngIf="selectedType=='customFormat'">
             <div class="d-flex align-items-center justify-content-between mb-4">
-                <span class="font-22 fw-600">Create Custom Format</span>
+                <span class="font-20 fw-500">Create Custom Format</span>
                 <button type="button" class="btn btn-link" (click)="closeWindow()">
                     <span class="dsi dsi-close text-dark"></span>
                 </button>
             </div>
-            <odp-custom-format-selector [edit]="edit" [(format)]="format" (formatChange)="onFormatChange($event)">
+            <odp-custom-format-selector [edit]="edit" [(format)]="tempFormat" (formatChange)="onFormatChange($event)">
             </odp-custom-format-selector>
         </ng-container>
     </ng-container>
