--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-flows/user-group-appcenter-flows.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-flows/user-group-appcenter-flows.component.html
@@ -1,4 +1,4 @@
-<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+<!-- <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
   <div class="align-self-center text-center">
     <div class="spinner-border text-dark" role="status">
       <span class="sr-only">Processing...</span>
@@ -25,7 +25,6 @@
           <span class="permissions d-flex align-items-center text-muted">
             <ng-container
               *ngIf="!aggregatePermission[ptnr.entity] || aggregatePermission[ptnr.entity]['total'] === 'no'">
-              <!-- <span class="fas fa-ban mr-2"></span> -->
               <span class="text" *ngIf="getAccess(ptnr)">Access {{ptnr?.flows?.length}} / {{getAccess(ptnr)}}</span>
               <span class="text" *ngIf="!getAccess(ptnr)">No Access </span>
             </ng-container>
@@ -62,5 +61,46 @@
     <ng-container *ngIf="(!partnerList || partnerList.length==0)&& !showLazyLoader">
       <p class="text-center font-weight-bold text-muted">No Partners</p>
     </ng-container>
+  </div>
+</div> -->
+
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+  <div class="align-self-center text-center">
+    <div class="spinner-border text-dark" role="status">
+      <span class="sr-only">Processing...</span>
+    </div>
+    <div class="text-secondary mt-2">Processing...</div>
+  </div>
+</div>
+<div class="d-flex flex-column justify-content-center row" *ngIf="flowList.length > 0">
+  <div class='data-services-section d-flex pt-3' *ngIf="!showLazyLoader">
+    <div class="select-ds d-flex flex-column text-muted">
+      <div class='ds-name py-2 px-3 hover' *ngFor="let flow of flowList; let flowIndex = index"
+        (click)="selectFlow(flow)" [ngClass]="{'text-dark': selectedFlow == flow}">
+        <span class="text-truncate d-block" style="max-width: 210px;" [ngbTooltip]="(flow.name.length>20)? flow.name:''"
+          placement="bottom">
+          {{flow.name}}
+        </span>
+      </div>
+    </div>
+    <div class="ds-details px-5 w-100">
+      <div class="admin-option d-flex align-items-center justify-content-between text-dark">
+        <span class="font-weight-bold">Permission to {{type === 'FLOW' ? 'trigger data pipes' : 'view interactions'}}
+        </span>
+        <div class="p-1">
+          <odp-switch [edit]="{status:true}" [checked]="checktrigger()" (checkedChange)="toggleTrigger($event)">
+          </odp-switch>
+        </div>
+      </div>
+
+
+
+    </div>
+  </div>
+</div>
+<div class="d-flex flex-row w-100 no-ds" *ngIf="flowList.length == 0 && !showLazyLoader">
+  <div class="d-flex flex-column w-50 h-auto justify-content-center m-auto">
+    <span class="text-muted"> There is no Data Pipe available. Please create a Data Pipe to configure the roles.
+    </span>
   </div>
 </div>
