--- a/src/app/home/agents/agent-view/agent-view.component.html
+++ b/src/app/home/agents/agent-view/agent-view.component.html
@@ -37,9 +37,8 @@
                     <span>Settings</span>
                     <span class="dsi dsi-drop-down ml-auto"></span>
                 </button>
-                <div class="item-actions d-flex align-items-center justify-content-end">
-                    <div *ngIf="showSettingsDropdown"
-                        class="more-options bg-white rounded list-group position-fixed border">
+                <div class="item-actions d-flex align-items-center justify-content-end position-fixed">
+                    <div *ngIf="showSettingsDropdown" class="more-options bg-white rounded list-group border">
                         <div id="agent-details" class="list-group-item list-group-item-action py-2 border-0"
                             (click)="openAgentDetailsWindow(agentDetails);">
                             Agent Details
@@ -52,11 +51,11 @@
                             (click)="test()">
                             Change Password
                         </div>
-                        <div id=" agent-edit" class="list-group-item list-group-item-action py-2 border-0"
+                        <div id="agent-edit" class="list-group-item list-group-item-action py-2 border-0"
                             *ngIf="canEditAgent()" (click)="showEditAgentWindow = true">
                             Edit
                         </div>
-                        <div id=" agent-clone" class="list-group-item list-group-item-action py-2 border-0">
+                        <div id="agent-clone" class="list-group-item list-group-item-action py-2 border-0">
                             Clone
                         </div>
                         <div id="agent-delete" class="list-group-item list-group-item-action py-2 border-0 text-danger"
@@ -330,7 +329,8 @@
                         <span class="fw-400 text-secondary" *ngIf="agentDetails.thePassword">{{agentDetails.thePassword
                             ||
                             ''}}</span>
-                        <span class="hover dsi dsi-copy text-secondary ml-2" *ngIf="agentDetails.thePassword"
+                        <span class="hover dsi dsi-copy text-secondary ml-2"
+                            *ngIf="agentDetails.thePassword && agentDetails.thePassword !=='********'"
                             (click)="copyPassword(agentDetails.thePassword)"></span>
                     </div>
                     <span class="fw-400 text-secondary" *ngIf="!agentDetails.thePassword">
