--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -96,7 +96,7 @@
                             <span id="agent-view" class="fw-600 font-13 hover mr-3"
                                 [routerLink]="['/app/',app,'agent',agent._id]">View</span>
                             <span id="agent-more" class="dsi dsi-more-vertical hover mr-3 ignore-outside"
-                                (click)="showDropDown($event,i)"></span>
+                                *ngIf="canEditAgent(agent._id)" (click)="showDropDown($event,i)"></span>
                             <div *ngIf="showOptionsDropdown[i]"
                                 class="more-options bg-white rounded list-group position-fixed border"
                                 (mouseleave)="showOptionsDropdown[i]=false" [ngStyle]="dropDownStyle" odpClickOutside
@@ -106,7 +106,7 @@
                                     Download
                                 </div>
                                 <div id="agent-edit" class="list-group-item list-group-item-action py-2 border-0"
-                                    *ngIf="canEditAgent(agent._id)" (click)="newAgent(agent)">
+                                    (click)="newAgent(agent)">
                                     Edit
                                 </div>
                                 <div id="agent-change-passowrd"
@@ -115,13 +115,12 @@
                                     Change Password
                                 </div>
                                 <div id="agent-clone" class="list-group-item list-group-item-action py-2 border-0"
-                                    *ngIf="canEditAgent(agent._id) && hasManagePermission('AGENT')"
-                                    (click)="cloneAgent(i)">
+                                    *ngIf="hasManagePermission('AGENT')" (click)="cloneAgent(i)">
                                     Clone
                                 </div>
                                 <div id="agent-delete"
                                     class="list-group-item list-group-item-action py-2 border-0 text-danger"
-                                    *ngIf="canEditAgent(agent._id)" (click)="deleteAgent(i);">
+                                    (click)="deleteAgent(i);">
                                     Delete
                                 </div>
                             </div>
