Side nav Flows permission on author

--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -60,7 +60,7 @@
       <ng-container *ngIf="
       hasConnectorsPermission||
       hasDataFormatPermission||
-      hasAgentsPermission
+      hasAgentsPermission||hasFlowsPermission
     ">
         <div class="icon-block-group text-secondary border-top border-border pt-3">
           <span *ngIf="showSideNav" class="nav-active d-flex align-items-center">
